# rewrite-inspector

./: .gitignore  LICENSE  README.md  cabal.project  rewrite-inspector.cabal
app/: Main.hs
examples/expr/: Main.hs
examples/str/: Main.hs
src/: BrickUI.hs  Gen.hs  Precompute.hs  Pretty.hs  RewriteInspector.hs  Types.hs
